# ChangeLog for dev-lang/tkgofer
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Dec 2008; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
  +files/2.1-gentoo-config.patch, +files/2.1-include-string.patch,
  +tkgofer-2.1.ebuild, +metadata.xml:
  Ebuild from bug 68373
