@@ -1,6 +1,6 @@
 AUX 2.1-gentoo-config.patch 2055 RMD160 15dff7bc437e4d1fdeac979a2d8bbdfe1d0568eb SHA1 f8b7152c4276f939e92c82d8c501f2b0eca06744 SHA256 c2424f817acbc43b0c7cc936c9474e73261978b19aa2e2c5c2f1b7600a8d0da1
 AUX 2.1-include-string.patch 814 RMD160 d39e1aed704444e3bc6c4a99c92dff58f9953c92 SHA1 eb710e3cded839a6def06b57d1f69181bc21c380 SHA256 18178796a81ff697c99125ef0a19919df63d512258ba86a6078f5942f13370ac
 DIST tkg2.1.tar.gz 1127597 RMD160 efb623710d11db01d4a9392afb052474c979595d SHA1 cebad772a6e1471ea88e02231189b3a743c24984 SHA256 606e58e10843ef10bbf0b515d91d992a090cd15bb5e4b48298c293407e0582a5
-EBUILD tkgofer-2.1.ebuild 1392 RMD160 2fe3cb7c580fa450e7d65d578de6576fe973d297 SHA1 b5d3a8bfbc89a37f9e48879f36b2429f592e55c3 SHA256 bc2c4320d0cc088d9db0cf32734c8d20e4f83f892d62e9332111552b11a0f7aa
-MISC ChangeLog 311 RMD160 d48e851f0f0f25eb560a60ad786b13e4dfd0b1bd SHA1 87157399feff7a91da0925ca877fbb33860df7db SHA256 c927f2abb9d227c2cb31b40a0b1af5392f5416fdecace1c2ff29383d2c75d503
+EBUILD tkgofer-2.1.ebuild 1369 RMD160 ee828167e14e4144d9db5b545eece95a6a13d353 SHA1 213aa0b079d044e549eb9b5bdee743c0de716b62 SHA256 692249dd3596dcc5a123d3a467ad62b0e6680005050b111f0ea7ad4f1a576089
+MISC ChangeLog 437 RMD160 80272113548fc1c0bc4f33a146091f8a328d3bfe SHA1 7c998257a6c440cc4e9b042339aa58aff7125d1b SHA256 357f45955c7affaf6f82c9f6c943f4376c8950a55ad1d9aa9ef87582bb42bf1b
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
