@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/tkgofer
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Jan 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  tkgofer-2.1.ebuild:
+  Add suggested RDEPEND=${DEPEND}, simplify
 
   30 Dec 2008; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
   +files/2.1-gentoo-config.patch, +files/2.1-include-string.patch,
